--- a/playground/test01/serverless.yml
+++ b/playground/test01/serverless.yml
@@ -25,8 +25,10 @@ provider:
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'eu-central-1'}
   stackName: ${self:service}-${self:provider.stage}
+  environment:
+    DYNAMODB_TABLE: ${self:provider.stackName}
   apiKeys:
-    - ${self:provider.stackName}-apikey
+    - ${self:provider.stackName}
   usagePlan:
     quota:
       limit: 5000
@@ -35,6 +37,17 @@ provider:
     throttle:
       burstLimit: 100
       rateLimit:  50
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.DYNAMODB_TABLE}"
+
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
 #    - Effect: "Allow"
@@ -123,3 +136,23 @@ functions:
 #     NewOutput:
 #       Description: "Description for the output"
 #       Value: "Some output value"
+
+resources:
+  Resources:
+    Test01DynamoDbTable:
+      Type: 'AWS::DynamoDB::Table'
+      DeletionPolicy: Retain
+      Properties:
+        AttributeDefinitions:
+          -
+            AttributeName: id
+            AttributeType: S
+        KeySchema:
+          -
+            AttributeName: id
+            KeyType: HASH
+        // could be changed to OnDemand in AWS console, not possible in Cloudformation at the moment
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+        TableName: ${self:provider.environment.DYNAMODB_TABLE}
