added bookmark test

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,7 @@
 {
-  "dependencies": {},
+  "dependencies": {
+    "md5": "^2.2.1"
+  },
   "name": "taboo4",
   "description": "tagged bookmark service",
   "version": "1.0.0",
