delete db on stack removal

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -63,7 +63,8 @@ resources:
   Resources:
     Test01DynamoDbTable:
       Type: 'AWS::DynamoDB::Table'
-      DeletionPolicy: Retain
+#      DeletionPolicy: Retain
+      DeletionPolicy: Delete
       Properties:
         AttributeDefinitions:
           -
