--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
   "devDependencies": {
     "aws-sdk": "^2.381.0",
     "chai": "^4.2.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.2"
   },
   "scripts": {
     "test": "npm run test-unit",
