--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,27 +1,15 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
 
 service: taboo4
 
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
+package:
+  exclude:
+    - testdata/**
+    - README.adoc
 
 provider:
   name: aws
   runtime: nodejs8.10
 
-# you can overwrite defaults here
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'eu-central-1'}
   stackName: ${self:service}-${self:provider.stage}
