--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -77,6 +77,14 @@ functions:
           method: get
           cors: true
           private: true
+  getTags:
+    handler: aws/tags_get.handler
+    events:
+      - http:
+          path: tags
+          method: get
+          cors: true
+          private: true
   createTable:
     handler: aws/dynamodb_createtable.handler
   deleteTable:
