--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -86,6 +86,18 @@ functions:
                 id: true
           cors: true
           private: true
+  deleteBookmark:
+    handler: aws/bookmark_delete.handler
+    events:
+      - http:
+          path: bookmark/{id}
+          method: delete
+          request:
+            parameters:
+              paths:
+                id: true
+          cors: true
+          private: true
   getBookmarks:
     handler: aws/bookmarks_get.handler
     events:
