--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "cheerio": "^1.0.0-rc.2",
     "core-js": "^2.5.4",
     "ngx-store": "^2.1.0",
     "rxjs": "~6.3.3",
