--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -127,6 +127,14 @@ functions:
           method: get
           cors: true
           private: true
+  postTitle:
+    handler: aws/title_post.handler
+    events:
+      - http:
+          path: title
+          method: post
+          cors: true
+          private: true
   createTable:
     handler: aws/dynamodb_createtable.handler
   deleteTable:
